# MaskDetectionTool

./: CMakeLists.txt  Info.plist  main.mm
MaskDetectionTool/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
MaskDetectionTool.xcodeproj/: project.pbxproj
MaskDetectionTool.xcodeproj/project.xcworkspace/xcuserdata/paulpan.xcuserdatad/: UserInterfaceState.xcuserstate
MaskDetectionTool.xcodeproj/xcuserdata/paulpan.xcuserdatad/xcschemes/: xcschememanagement.plist
MaskDetectionTool/Base.lproj/: Main.storyboard
MaskDetectionToolTests/: MaskDetectionToolTests.m
MaskDetectionToolUITests/: MaskDetectionToolUITests.m  MaskDetectionToolUITestsLaunchTests.m
